--- a/Cluster-Assessment.Rmd
+++ b/Cluster-Assessment.Rmd
@@ -10,22 +10,96 @@ library(hopkins)
 
 ## Customer Data 123
 ```{r}
-aryan1 <- read.csv("Dataset_Aryan/Customer_Data.csv", header = TRUE)
-aryan1 <- aryan1[, -1]
-aryan1 <- na.omit(aryan1)
+# aryan1 <- read.csv("Dataset_Aryan/Customer_Data.csv", header = TRUE)
+# aryan1 <- aryan1[, -1]
+# aryan1 <- na.omit(aryan1)
+#
+# hopkins_val <- hopkins(aryan1, m = ceiling(nrow(aryan1) / 10))
+# hopkins_val
+```
 
-hopkins_val <- hopkins(aryan1, m = ceiling(nrow(aryan1) / 10))
-hopkins_val
+## K-Means
+```{r}
+# df <- read.csv("Dataset_Pat/hcvdat0.csv", header = TRUE)
+# drops <- c("X", "Category", "Sex")
+# df <- df[, !(names(df) %in% drops)]
+
+# df <- read.csv("Dataset_Aryan/Customer_Data_ok.csv", header = TRUE)
+# drops <- "cust_id"
+# df <- df[, !(names(df) %in% drops)]
+# df <- na.omit(df)
+
+df <- read_excel("Dataset_Roman/Mine_Dataset.xls")
+drops <- c("M")
+df <- df[, !(names(df) %in% drops)]
+
+# df <- read.csv("Dataset_Roman/Wholesale customers data.csv", header = TRUE)
+# drops <- c("Channel", "Region")
+# df <- df[, !(names(df) %in% drops)]
+
+df
 ```
 
 
 ```{r}
-pat1 <- read.csv("Dataset_Pat/heart.csv", header = TRUE)
-pat1 <- pat1[, 0:13]
-pat1 <- na.omit(pat1)
-
-hopkins_val <- hopkins(pat1, m = ceiling(nrow(pat1) / 10))
-hopkins_val
+km.res <- kmeans(scale(df), 5, nstart = 30)
+km.res
 ```
 
-## 123456
+
+```{r}
+color_pallet <- c("#2E9FDF", "#00AFBB", "#E7B800", "#FC4E07", "#00FF00", "pink", "lightblue", "purple")
+
+fviz_cluster(km.res, data = df,
+             palette = color_pallet,
+             ellipse.type = "euclid", # Concentration ellipse
+             star.plot = TRUE, # Add segments from centroids to items
+             # repel = TRUE, # Avoid label overplotting (slow)
+             ggtheme = theme_minimal()
+)
+```
+
+## Hierarchical
+```{r}
+df_h <- read.csv("Dataset_Roman/sobar-72.csv", header = TRUE)
+drops <- "ca_cervix"
+df_h <- df_h[, !(names(df_h) %in% drops)]
+df_h <- na.omit(df_h)
+df_h
+```
+
+```{r}
+res.dist <- dist(df_h, method = "euclidean")
+res.dist
+```
+
+
+```{r}
+as.matrix(res.dist)[1:6, 1:6]
+```
+
+
+```{r}
+res.hc <- hclust(d = res.dist, method = "ward.D2")
+res.hc
+```
+
+```{r}
+fviz_dend(res.hc, k = 5, # Cut in four groups
+          cex = 0.5, # label size
+          k_colors = color_pallet,
+          color_labels_by_k = TRUE, # color labels by groups
+          rect = TRUE # Add rectangle around groups
+)
+```
+
+```{r}
+grp <- cutree(res.hc, k = 5)
+
+fviz_cluster(list(data = df_h, cluster = grp),
+             palette = color_pallet,
+             ellipse.type = "convex", # Concentration ellipse
+             repel = TRUE, # Avoid label overplotting (slow)
+             show.clust.cent = FALSE,
+             ggtheme = theme_minimal())
+```
