--- a/Roman-Test.Rmd
+++ b/Roman-Test.Rmd
@@ -56,9 +56,6 @@ head(wdbc)
 str(wdbc)
 ```
 
-```{r}
-rownames(wdbc)
-```
 
 ### Hierarchical Clustering: mtcars
 ```{r}
@@ -184,6 +181,7 @@ wdbc_silhouette_kmeans +
   plot_layout(ncol = 2) # TODO: adjust size
 ```
 
+
 #### Gap Statistic: k-means and pam
 ```{r}
 wdbc_gap_kmeans <- fviz_nbclust(wdbc, kmeans, nstart = 50, method = "gap_stat", nboot = 50)
@@ -197,7 +195,7 @@ wdbc_gap_kmeans +
 TODO: the positive negative bar plot
 
 ### Dataset: mtcars
-TODO: dendrogram and elbow method
+TODO: dendrogram and gap method
 ```{r}
 wdbc_gap_hierarchical <- fviz_nbclust(mtcars, hcut, nstart = 50, method = "gap_stat", nboot = 500)
 wdbc_gap_hierarchical
@@ -241,6 +239,67 @@ fviz_cluster(
   ggtheme = theme_minimal()
 )
 ```
+
+
+
+## 3. Internal Validation
+```{r}
+# Perform internal validation
+intern_wdbc <- clValid(wdbc, 2:6, clMethods = c("kmeans", "hierarchical", "pam"), validation = "internal")
+
+# Display the summary of the internal validation results
+summary(intern_wdbc)
+```
+
+
+```{r}
+# Set graphical parameters to combine plots
+op <- par(no.readonly = TRUE)
+par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
+
+# Plot the validation results without legends
+plot(intern_wdbc, legend = FALSE)
+
+# Custom plot for the legend
+plot(nClusters(intern_wdbc), measures(intern_wdbc, "Dunn")[,,1], type = "n", axes = FALSE, xlab = "", ylab = "")
+legend("center", clusterMethods(intern_wdbc), col = 1:9, lty = 1:9, pch = paste(1:9))
+
+# Reset graphical parameters
+par(op)
+```
+
+## 3.2. Stability Validation
+
+```{r}
+# Perform stability validation
+stab_wdbc <- clValid(wdbc, 2:6, clMethods = c("hierarchical", "kmeans", "pam"), validation = "stability")
+
+# Display the optimal scores using the optimalScores method
+optimal_scores_stab <- optimalScores(stab_wdbc)
+print(optimal_scores_stab)
+
+```
+
+
+```{r}
+# Set graphical parameters to combine plots
+op <- par(no.readonly = TRUE)
+par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
+
+# Plot the stability validation results without legends
+plot(stab_wdbc, measure = c("APN", "AD", "ADM", "FOM"), legend = FALSE)
+
+# Custom plot for the legend
+plot(nClusters(stab_wdbc), measures(stab_wdbc, "APN")[,,1], type = "n", axes = FALSE, xlab = "", ylab = "")
+legend("center", clusterMethods(stab_wdbc), col = 1:9, lty = 1:9, pch = paste(1:9))
+
+# Reset graphical parameters
+par(op)
+```
+
+
+
+
 
 ## 5. Hierarchical Clustering using mtcars
 
@@ -319,73 +378,89 @@ fviz_dend(
 
 ```{r}
 # Correlation between cophenetic distance and the original distance
-cor(res.dist, cophenetic(hc_average))
+cor(res.dist.gower, cophenetic(hc_average))
 ```
 
 
 #### 2.4. Centroid Linkage Method
 ```{r}
-hc_centroid <- hclust(d = res.dist, method = "ward.D2")
+hc_centroid <- hclust(d = res.dist.gower, method = "ward.D2")
 hc_centroid
-```
 
-
-```{r}
 fviz_dend(
   hc_centroid,
   cex = 0.5,
-  main = "Centroid Linkage Dendrogram"
-) + theme(axis.text.x = element_text(angle = 0, hjust = 2))
+  k = 2,
+  k_colors = "jco",
+  rect = TRUE,
+  rect_border = "jco",
+  rect_fill = TRUE,
+  label_cols = "black",
+  label_cex = 0.5,
+  main = "Average Centroid Dendrogram"
+) + theme_minimal()
 ```
+
 
 
 ```{r}
 # Correlation between cophenetic distance and the original distance
-cor(res.dist, cophenetic(hc_centroid))
+cor(res.dist.gower, cophenetic(hc_centroid))
 ```
 
 
 #### 2.5. ward.D Method
 ```{r}
-hc_ward <- hclust(d = res.dist, method = "ward.D")
+hc_ward <- hclust(d = res.dist.gower, method = "ward.D")
 hc_ward
-```
 
-
-```{r}
 fviz_dend(
   hc_ward,
   cex = 0.5,
-  main = "Ward Dendrogram"
-) + theme(axis.text.x = element_text(angle = 0, hjust = 2))
+  k = 2,
+  k_colors = "jco",
+  rect = TRUE,
+  rect_border = "jco",
+  rect_fill = TRUE,
+  label_cols = "black",
+  label_cex = 0.5,
+  main = "Average ward.D Dendrogram"
+) + theme_minimal()
 ```
+
 
 
 ```{r}
 # Correlation between cophenetic distance and the original distance
-cor(res.dist, cophenetic(hc_ward))
+cor(res.dist.gower, cophenetic(hc_ward))
 ```
 
 
 #### 2.6. ward.D2 Method
 ```{r}
-hc_ward2 <- hclust(d = res.dist, method = "ward.D2")
+hc_ward2 <- hclust(d = res.dist.gower, method = "ward.D2")
 hc_ward2
-```
 
-
-```{r}
 fviz_dend(
   hc_ward2,
   cex = 0.5,
-  main = "Ward Dendrogram"
-) + theme(axis.text.x = element_text(angle = 0, hjust = 2))
+  k = 2,
+  k_colors = "jco",
+  rect = TRUE,
+  rect_border = "jco",
+  rect_fill = TRUE,
+  label_cols = "black",
+  label_cex = 0.5,
+  main = "Average ward.D2 Dendrogram"
+) + theme_minimal()
 ```
+
+
 
 
 ```{r}
 # Correlation between cophenetic distance and the original distance
-cor(res.dist, cophenetic(hc_ward2))
+cor(res.dist.gower, cophenetic(hc_ward2))
 ```
 
 
@@ -435,7 +510,7 @@ cors <- cor.dendlist(dend_list)
 # Print correlation matrix
 round(cors, 2)
 ```
-
+## Correlation matrix
 
 ```{r}
 # Visualize the correlation matrix using corrplot package
@@ -448,7 +523,7 @@ corrplot(cors, "pie", "lower")
 res.agnes <- agnes(
   x = cars, # data matrix
   stand = TRUE, # Standardize the data
-  metric = "euclidean", # metric for distance matrix
+  metric = "gower", # metric for distance matrix
   method = "ward" # Linkage method
 )
 ```
@@ -459,29 +534,86 @@ res.agnes <- agnes(
 res.diana <- diana(
   x = cars, # data matrix
   stand = TRUE, # standardize the data
-  metric = "euclidean" # metric for distance matrix
+  metric = "gower" # metric for distance matrix
 )
 ```
 
 
 ```{r}
-fviz_dend(res.agnes, cex = 0.6, k = 4)
+fviz_dend(res.agnes, cex = 0.6, k = 2)
 ```
 
 
 ```{r}
-fviz_dend(res.diana, cex = 0.6, k = 4)
+fviz_dend(res.diana, cex = 0.6, k = 2)
 ```
 
 
 ```{r}
 fviz_dend(
-  res.hc,
-  k = 5, # Cut in four groups
+  hc_ward,
+  k = 2, # Cut in four groups
   cex = 0.5, # label size
   palette = "jco",
   color_labels_by_k = TRUE, # color labels by groups
   rect = TRUE # Add rectangle around groups
 )
 ```
+
+## 6. Internal Validation
+```{r}
+# Perform internal validation
+intern_mtcars <- clValid(mtcars_numerical_scaled, 2:6, clMethods = c("hierarchical", "kmeans", "pam"), validation = "internal")
+
+# Display the summary of the internal validation results
+summary(intern_mtcars)
+```
+
+```{r}
+# Set graphical parameters to combine plots
+op <- par(no.readonly = TRUE)
+par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
+
+# Plot the validation results without legends
+plot(intern_mtcars, legend = FALSE)
+
+# Custom plot for the legend
+plot(nClusters(intern_mtcars), measures(intern_mtcars, "Dunn")[,,1], type = "n", axes = FALSE, xlab = "", ylab = "")
+legend("center", clusterMethods(intern_mtcars), col = 1:9, lty = 1:9, pch = paste(1:9))
+
+# Reset graphical parameters
+par(op)
+```
+
+
+## 3.2. Stability Validation
+
+```{r}
+# Perform stability validation
+stab_mtcars <- clValid(mtcars_numerical_scaled, 2:6, clMethods = c("hierarchical", "kmeans", "pam"), validation = "stability")
+
+# Display the optimal scores using the optimalScores method
+optimal_scores_stab_mtcars <- optimalScores(stab_mtcars)
+print(optimal_scores_stab_mtcars)
+
+```
+
+```{r}
+# Set graphical parameters to combine plots
+op <- par(no.readonly = TRUE)
+par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
+
+# Plot the stability validation results without legends
+plot(stab_mtcars, measure = c("APN", "AD", "ADM", "FOM"), legend = FALSE)
+
+# Custom plot for the legend
+plot(nClusters(stab_mtcars), measures(stab_mtcars, "APN")[,,1], type = "n", axes = FALSE, xlab = "", ylab = "")
+legend("center", clusterMethods(stab_mtcars), col = 1:9, lty = 1:9, pch = paste(1:9))
+
+# Reset graphical parameters
+par(op)
+```
+
+
+
 
